<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_color_deep_red">

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/right_slide_close"
            android:layout_width="?actionBarSize"
            android:layout_height="?actionBarSize"
            android:layout_alignParentLeft="true"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:src="@drawable/fork" />

        <ImageView
            android:id="@+id/search"
            android:layout_width="?actionBarSize"
            android:layout_height="?actionBarSize"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:src="@drawable/search_white"
            android:visibility="gone"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/logo_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15.0dip"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/title_logo_rl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_tv"
        android:layout_marginTop="38.0dip">

        <View
            android:layout_width="91.0dip"
            android:layout_height="0.5dip"
            android:layout_centerVertical="true"
            android:background="@color/white" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/weread_signature" />

        <View
            android:layout_width="91.0dip"
            android:layout_height="0.5dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/column_ll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_logo_rl"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dip"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/news_tv"
            style="@style/MenuColunmStyle"
            android:text="@string/news" />

        <TextView
            android:id="@+id/meizi_tv"
            style="@style/MenuColunmStyle"
            android:layout_marginTop="18.0dip"
            android:text="@string/meizi" />

        <TextView
            android:id="@+id/video_tv"
            style="@style/MenuColunmStyle"
            android:layout_marginTop="18.0dip"
            android:text="@string/video" />

        <TextView
            android:id="@+id/story_tv"
            style="@style/MenuColunmStyle"
            android:layout_marginTop="18.0dip"
            android:text="@string/story" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/column_ll"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50.0dip"
        android:text="\@Copyright by weiwei"
        android:textColor="@color/white"
        android:textSize="8sp" />

</RelativeLayout>
