<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.NewsActivity">

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:id="@+id/left_slide"
            android:layout_width="?actionBarSize"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:src="@drawable/column" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/news"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtMore"
            android:layout_width="?actionBarSize"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/more"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnRefresh"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toStartOf="@id/txtMore"
            android:background="@drawable/ic_refresh_selector" />

    </RelativeLayout>

    <View
        android:id="@+id/top_view"
        android:layout_width="35dp"
        android:layout_height="0.5dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/title_bar" />

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_view"
        android:background="@color/white">

        <com.sunset.mvp_retrofit_master.view.base.MySwipeRefreshLayout
            android:id="@+id/swipe_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical" />
        </com.sunset.mvp_retrofit_master.view.base.MySwipeRefreshLayout>
    </FrameLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="27dp"
        android:layout_marginRight="36dp"
        android:clickable="true"
        android:elevation="4dp"
        android:src="@drawable/ic_arrow_upward"
        app:backgroundTint="@color/refresh_progress_2"
        app:borderWidth="0dp"
        app:elevation="4dp" />
</RelativeLayout>
